# ENVI

./: .gitattributes  .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md
.planning/: OPEN-ITEMS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/debug/: gis-import-and-render-defects.md
.planning/phases/01-force-harness-geometry-model-direct-path/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md  SKELETON.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  OPEN-GIS-LANDSCAPE.md  PITFALLS.md  STACK.md  SUMMARY.md
cases/: freefield_100m.toml  freefield_spectrum.toml  geometry_azimuth.toml  geometry_reflection.toml  refraction_downwind.toml  refraction_upwind_shadow.toml  terrain_flat_sigma200.toml  terrain_mixed_case21.toml  terrain_screen_thick_case81.toml  terrain_screen_thin_case71.toml  terrain_screens_double_case91.toml
crates/: README.md
crates/envi-compute/: Cargo.toml
crates/envi-compute-wasm/: Cargo.toml
crates/envi-compute/src/: cost.rs  grid.rs  identity.rs  interpolate.rs  isoband.rs  job_assembly.rs  lib.rs  readout.rs  scene_dto.rs  tiers.rs  weighting.rs
crates/envi-compute/src/export/: csv.rs  geojson.rs  geotiff.rs  mod.rs
crates/envi-dgm/: Cargo.toml
crates/envi-dgm/src/: lib.rs  tin.rs
crates/envi-engine/: Cargo.toml
crates/envi-engine/src/: directivity.rs  forest.rs  freq.rs  geometry.rs  lib.rs  scene.rs  solver.rs  tensor.rs  transfer.rs
crates/envi-engine/src/propagation/: air_absorption.rs  coherence.rs  diffraction.rs  divergence.rs  fresnel.rs  ground.rs  mod.rs  rays.rs  special.rs  terrain_interpretation.rs  transmission.rs
crates/envi-engine/src/propagation/refraction/: circular_ray.rs  eqssp.rs  mod.rs  profile.rs  shadow_zone.rs
crates/envi-engine/src/propagation/terrain_effect/: mod.rs  screen.rs  submodel1.rs  submodel11.rs  submodel2.rs  submodel3.rs  submodel7.rs  submodel8.rs
crates/envi-engine/src/propagation/terrain_effect/screen/: tests.rs
crates/envi-geo/: Cargo.toml
crates/envi-geo/src/: crs.rs  lib.rs  transform.rs
crates/envi-geo/tests/: oracle_rd.rs  oracle_utm.rs
crates/envi-geo/tests/fixtures/oracle/: rd_landmarks.toml  utm_landmarks.toml
crates/envi-gis/: Cargo.toml
crates/envi-gis-wasm/: Cargo.toml
crates/envi-gis-wasm/src/: dto.rs  lib.rs
crates/envi-gis/src/: buildings.rs  era5.rs  geojson_util.rs  grid.rs  impedance.rs  impedance_table.rs  landcover.rs  lib.rs  merge.rs  path.rs  profile.rs  provenance.rs  registry.rs  screening.rs  terrain.rs  tiles.rs  weather.rs
crates/envi-gis/src/cog/: geo_tags.rs  header.rs  mod.rs  plan.rs  sparse.rs  window.rs
crates/envi-gis/src/registry/: ahn_index.toml
crates/envi-gis/tests/: buildings_overpass.rs  cog_range_plan.rs  cog_window.rs  era5_occurrence.rs  profile_oracle.rs  weather_openmeteo.rs
crates/envi-gis/tests/fixtures/: era5_synthetic.toml  openmeteo_archive.json  openmeteo_forecast.json
crates/envi-gis/tests/fixtures/cog/: README.md  ahn_bigtiff.tif  ahn_bigtiff.toml  bomb.tif  bomb.toml  glo30_predictor3.tif  glo30_predictor3.toml  nodata_edge.tif  nodata_edge.toml  range_tiled.tif  range_tiled.toml  worldcover_palette.tif  worldcover_palette.toml
crates/envi-gis/tests/fixtures/overpass/: amsterdam_buildings.json
crates/envi-gis/tests/fixtures/rprofile/: README.md  rprofile.csv  rprofile_dem.tif
crates/envi-harness/: Cargo.toml
crates/envi-harness/src/: capability.rs  compare.rs  facade.rs  lib.rs  main.rs  scene_build.rs
crates/envi-harness/src/cases/: mod.rs  toml.rs  xls.rs
crates/envi-harness/src/emission/: coefficients.rs  mod.rs  passby.rs
crates/envi-harness/src/weather/: mod.rs  route1.rs  route2.rs  route3.rs
crates/envi-harness/tests/: emission_anchor.rs  emission_force_delta.rs  force.rs  mac_identity.rs  opaque_regression.rs  oracle_flat.rs  oracle_forest.rs  oracle_ground.rs  oracle_minphase.rs  oracle_noisemodelling.rs  oracle_refraction.rs  oracle_screen.rs  oracle_submodel11.rs  oracle_submodel3.rs  oracle_wedge.rs  solve_baseline.rs  tensor_budget.rs  terrain.rs
crates/envi-harness/tests/fixtures/oracle/: flat_mixed_case21.toml  flat_sigma200.toml  forest.toml  ground_w_qhat.toml  minphase.toml  noisemodelling.toml  refraction.toml  screen_thin.toml  submodel11.toml  submodel3.toml  wedge_il.toml
crates/envi-harness/tests/fixtures/regression/: opaque_baseline.toml  solve_baseline.toml
crates/envi-service/: Cargo.toml
crates/envi-service/src/: error.rs  jobs.rs  lib.rs  main.rs  selfcheck.rs  state.rs
crates/envi-service/src/api/: calc.rs  dgm.rs  era5.rs  jobs.rs  meta.rs  mod.rs  projects.rs  proxy.rs  scene.rs
crates/envi-service/tests/: contract_calc.rs  contract_dgm.rs  contract_era5.rs  contract_interpolate_spectrum.rs  contract_isolation_headers.rs  contract_jobs.rs  contract_meta_static.rs  contract_projects.rs  contract_proxy.rs  wire_no_drift.rs
crates/envi-service/tests/common/: mod.rs
crates/envi-store/: Cargo.toml
crates/envi-store/src/: calibrate.rs  dto.rs  geojson.rs  hash.rs  interpolate.rs  lib.rs  manifest.rs  project_dir.rs
docs/references/: dbaudio-ti386-1.6-en.md  nord2000-source-modelling-jonasson-rev061017.md
refs/: fetch.sh  refs.sha256
tools/crs_oracle/: gen_rd.py  gen_utm.py
tools/gis_oracle/: gen_ahn_index.py  gen_cog_fixtures.py  gen_e2e_fixtures.py
tools/noisemodelling_oracle/: README.md
tools/nord2000_oracle/: common.py  flat_models.py  gen_case_fixtures.py  gen_flat_fixtures.py  gen_forest_fixtures.py  gen_ground_fixtures.py  gen_minphase_fixtures.py  gen_refraction_fixtures.py  gen_screen_fixtures.py  gen_submodel11_fixtures.py  gen_submodel3_fixtures.py  gen_wedge_fixtures.py
tools/rprofile_oracle/: gen_rprofile_fixture.py
web/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
web/src/: App.tsx  app.css  d01-no-acoustic-math.test.ts  icons.ts  main.tsx  testBridge.ts  theme.css  vite-env.d.ts
(+333 files in other folders)
