[package]
name = "envi-harness"
description = "ENVI validation harness — FORCE/TOML case loading, comparison, reporting (all I/O lives here)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
envi-engine = { path = "../envi-engine" }
calamine = "0.36"
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
thiserror = "2"
libtest-mimic = "0.8"
# num-complex is already in the lockfile (via envi-engine) — NOT a new package.
# The engine's public tensor API exposes `Complex<f64>`, and the 04-02 pass-by
# integrator fills the tensor's coherent channel, so the harness needs it as a
# normal dep. The ENGINE quarantine (ndarray+num-complex+thiserror,
# `cargo tree -p envi-engine` unchanged) and the zero-new-package posture hold.
num-complex = "0.4"

[dev-dependencies]
approx = "0.5"

# Dynamic case-driven test runner: one libtest-mimic Trial per discovered
# FORCE worksheet / TOML case (01-RESEARCH "Dynamic FORCE tests").
[[test]]
name = "force"
harness = false
