[package]
name = "envi-harness"
description = "ENVI validation harness — FORCE/TOML case loading, comparison, reporting (all I/O lives here)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
envi-engine = { path = "../envi-engine" }
# METX-01 (09-03): the weather-route log-lin LSQ + `WeatherComponents` /
# `profile_for_bearing` / `ReflectionProfiles` were lifted into the WASM-safe
# `envi-gis::weather` (single source of truth). The harness DELEGATES to them
# (Route 2/3) instead of keeping a second copy of the 3×3 Cramer fit. envi-gis is
# pure-Rust (no async/network/browser edge), so this dependency is quarantine-safe
# and introduces no cycle (envi-gis never depends on envi-harness).
envi-gis = { path = "../envi-gis" }
calamine = "0.36"
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
thiserror = "2"
libtest-mimic = "0.8"
# num-complex is already in the lockfile (via envi-engine) — NOT a new package.
# The engine's public tensor API exposes `Complex<f64>`, and the 04-02 pass-by
# integrator fills the tensor's coherent channel, so the harness needs it as a
# normal dep. The ENGINE quarantine (ndarray+num-complex+thiserror,
# `cargo tree -p envi-engine` unchanged) and the zero-new-package posture hold.
num-complex = "0.4"

[dev-dependencies]
approx = "0.5"

# Dynamic case-driven test runner: one libtest-mimic Trial per discovered
# FORCE worksheet / TOML case (01-RESEARCH "Dynamic FORCE tests").
[[test]]
name = "force"
harness = false
