[package]
name = "envi-service"
description = "ENVI self-hosted axum service — the single deployable: /api/v1 + the web/dist bundle (thin HTTP layer, no acoustics)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# Boundary rule (06-RESEARCH "Architectural Responsibility Map"): this is a THIN
# HTTP layer — routing, jobs, and wire contracts only. Storage lives in
# envi-store, CRS reprojection in envi-geo, and acoustic math NEVER here (SVC-07:
# all spectra originate server-side from the engine's frozen constants).
[dependencies]
envi-engine = { path = "../envi-engine" }
envi-geo = { path = "../envi-geo" }
envi-store = { path = "../envi-store" }
# envi-dgm: the POST /dgm/triangulate handler delegates to envi_dgm::tin::build_tin
# (server-side digital-ground-model TIN, D-08). Geometry math lives THERE, never in
# this thin HTTP layer (SVC-07); the service only maps DgmError -> ApiError 4xx.
envi-dgm = { path = "../envi-dgm" }
axum = "0.8"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "signal",
    "sync",
    "time",
] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
# set-header (D-04, plan 10-02): the cross-origin-isolation COOP/COEP response-header
# layers on the app bundle use `tower_http::set_header::SetResponseHeaderLayer`. `fs`
# is the existing ServeDir/ServeFile static-bundle serving.
tower-http = { version = "0.7", features = ["fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# geojson: the scene GET/PUT handlers round-trip a WGS84 FeatureCollection on the
# wire and delegate it to `envi_store::project_dir::ProjectStore::{load,save}_scene`
# (which take `&geojson::FeatureCollection`). Naming that type at the HTTP boundary
# requires geojson as a direct dep (it is already a transitive dep via envi-store).
geojson = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
# env-filter: main initializes tracing with an EnvFilter (RUST_LOG-aware, default
# `info`) per the D-08 startup-logging requirement.
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# reqwest (D-02, Pattern 5): the server-side HTTP client for the allowlisted byte
# relay (`api/proxy.rs`). `rustls-tls` keeps TLS pure-Rust (workspace no-C rule);
# `default-features = false` is what keeps the C-linked TLS backends out of the
# dependency graph. `stream` gives `bytes_stream()` so the relay streams the
# upstream body under a size cap instead of buffering it. Server-side only; never
# on the wasm path.
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
# envi-gis (D-04, OPTIONAL, era5-only): the flagged ERA5/CDS retrieval endpoint
# (`api/era5.rs`) runs the pure-Rust `envi_gis::era5` occurrence-statistics
# derivation on completion. It is pulled in ONLY under `--features era5`, so the
# default build's dependency graph and bin are byte-unchanged (the endpoint is
# absent by default; a contract test asserts the route is not registered). NOTE:
# `reqwest` is NOT gated behind this feature — the Phase-8 byte relay
# (`api/proxy.rs`) already requires it unconditionally, so gating it would break
# the default build. The era5 endpoint REUSES that same shared client; the feature
# gates the new module + route + the envi-gis derivation dep instead.
envi-gis = { path = "../envi-gis", optional = true }
thiserror = "2"
# ts-rs (D-10): derive the TS wire mirror on the service request/response DTOs +
# JobStatus. uuid-impl maps `Uuid -> string`; no-serde-warnings silences the
# benign "cannot parse `transparent`" note on JobId (ts-rs inlines the newtype to
# `type JobId = string` regardless — the no-drift test verifies the output).
ts-rs = { version = "12", features = ["uuid-impl", "no-serde-warnings"] }

# Feature flags (D-04). `era5` is DEFAULT-OFF: it gates the flagged ERA5/CDS
# retrieval endpoint (`api/era5.rs` + its route) and the pure-Rust `envi-gis`
# occurrence-statistics derivation it delegates to. With the feature off the
# endpoint does not compile in and the route is absent (contract-tested). Live
# CDS retrieval additionally requires a server-env `CDS_API_KEY`; absent it, the
# endpoint reports "disabled" — the endpoint ships the security posture
# (SSRF-allowlisted host, no key/host/path leak) while the live fetch stays off.
[features]
era5 = ["dep:envi-gis"]

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
# envi-gis-wasm (dev-only, D-10): the WASM boundary DTOs are routed through the
# SAME ts-rs generate-and-commit no-drift mechanism as the HTTP wire. The
# `wire_no_drift` test registers them in `export_all_wire_types` so the single
# committed `web/src/generated/wire.ts` is the one source of truth for BOTH the
# HTTP wire and the WASM boundary. The `rlib` output of the cdylib compiles
# natively for the test; nothing from this crate reaches the running service.
envi-gis-wasm = { path = "../envi-gis-wasm" }
