[package]
name = "envi-store"
description = "ENVI persistence layer — serde DTO mirror + project-as-folder flat-file storage (the serde quarantine seam; engine stays serde-free)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# Boundary rule (D-05, Anti-Pattern 1): this crate is the serde quarantine seam.
# Engine scene types are TWINNED here as serde DTOs, never serde-derived in
# envi-engine (the `cargo tree -p envi-engine` gate must stay ndarray +
# num-complex + thiserror). Reprojection goes through envi-geo ONLY (GEOX-04);
# this crate never calls proj4rs directly and adds no C-linked crate.
[dependencies]
envi-engine = { path = "../envi-engine" }
envi-geo = { path = "../envi-geo" }
# The WASM-safe tensor-identity closure (tensor_hash + CalcManifest +
# chunk_receivers + MetDto/ReceiverDto + geometry_positions) was factored into
# envi-compute (Phase 10, 10-01); this crate re-exports it and keeps the std::fs
# manifest I/O. The edge points envi-store -> envi-compute, never the reverse.
envi-compute = { path = "../envi-compute" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geojson = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tempfile = "3"
thiserror = "2"
# ts-rs (D-10): generate the committed TS wire mirror from these serde DTOs.
# uuid-impl maps `Uuid -> string`; serde-compat (default) honors #[serde(tag/
# rename_all)] so tagged enums render as real TS discriminated unions. This is
# the ONLY crate-graph ts-rs enters besides envi-service — NEVER envi-engine.
ts-rs = { version = "12", features = ["uuid-impl"] }

[dev-dependencies]
approx = "0.5"
